--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,22 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation group: 'org.json', name: 'json', version: '20201115'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.4.1'
+    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.4.5'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
 }
 
 test {
